spotify-login.html

--- a/spotify-login.html
+++ b/spotify-login.html
@@ -588,15 +588,8 @@ async function playTrack(accessToken, trackUri) {
     <script>
         // ===== CONFIGURAÇÕES =====
         const SPOTIFY_CLIENT_ID = '01c7679565904f0498ef6424b3c7ea36'; // ✅ SEU CLIENT ID CONFIGURADO!
-        // Para HTTPS, use uma das opções abaixo:
-        // Opção 1: GitHub Pages (gratuito e fácil)
-        const REDIRECT_URI = 'https://seuusuario.github.io/callback';
-        
-        // Opção 2: Netlify (gratuito e fácil)
-        // const REDIRECT_URI = 'https://seuapp.netlify.app/callback';
-        
-        // Opção 3: Vercel (gratuito e fácil)
-        // const REDIRECT_URI = 'https://seuapp.vercel.app/callback';
+        // ✅ SUA URL REAL DO GITHUB PAGES:
+        const REDIRECT_URI = 'https://pedrorocha2000.github.io/Spotify/callback';
 
         // ===== LOGIN COM SPOTIFY =====
         function loginWithSpotify() {
